# octopod-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  buildspec.yml  docker-compose.yml  octopod_app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260428_0001_create_email_and_outreach_tables.py  20260430_0001_initial_schema.py  20260430_0002_add_pipeline_schedule_table.py  20260504_0001-0002_add_control_signal_to_ingest_job.py  20260504_0003_gh_state_machine.py  20260507_0004_add_multi_tenant_tables.py  20260508_0005_add_billing_tables.py  20260513_0006_profile_ranking_columns.py
app/: main.py  settings.py
app/api/: health.py  router.py  tags.py
app/common/: exceptions.py  hashing.py  ingest_common.py  pagination.py
app/db/: base.py  engine.py  opensearch_client.py  qdrant_client.py  session.py
app/ingest/: __main__.py  cli.py
app/middleware/: actor_context.py
app/model/: aggregated_individual_profile_model.py  billing_event_model.py  campaign_recipient_model.py  campaign_step_model.py  career_event_model.py  claim_evidence_model.py  cohesive_individual_profile_model.py  cohesive_profile_model.py  contributor_score_model.py  developer_profile_model.py  email_campaign_model.py  email_event_model.py  email_message_model.py  employee_model.py  (+16 more)
docs/: email-sequence-plan.md  er-diagram.md  identity-resolution.md  ingest-pipeline-re-architucture.md  ingest-pipeline-sfn-migration.md  ingestion-api-split.md  ingestion-pipelin.md  ingestion-state-diagram.md  injest-jobs-tracking.md  octopod-architecture.md  octopod-auth.md  octopod-ingest.md  octopod-payment-plan.md  octopod-plan.md  octopod-profile-plan.md  octopod-user-org.md  search-plan.md
scripts/: backfill_stripe_customers.py
sql/: email_outreach_schema.sql  gh_schema.sql  hf_schema.sql  ingest_job_schema.sql  schema.sql  search_tsv_migration.sql
tests/: conftest.py  test_health.py
(+246 files in other folders)
