[tool.poetry]
name = "octopod-backend"
version = "0.1.0"
description = "Octopod Backend API Service"
authors = ["Sunil Tiwari <sunil28071987@gmail.com>","Payal Fofadiya <fofadiyapayal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
httpx = "^0.28.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.9.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
alembic = "^1.15.0"
psycopg = "^3.2.0"
motor = "^3.7.0"
pymongo = "^4.13.0"
python-dateutil = "^2.9.0"
aiohttp = "^3.12.0"
jinja2 = "^3.1.4"
qdrant-client = "^1.11.0"
sentence-transformers = "^3.0.0"
aiosmtplib = "^3.0.0"
opensearch-py = "^2.7.0"
croniter = "^2.0.0"
prometheus-client = {version = "^0.22.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.4.0"
black = "^24.3.0"
isort = "^5.13.0"
mypy = "^1.9.0"
ruff = "^0.8.0"
debugpy = "^1.8.0"
aiosqlite = "^0.22.1"
greenlet = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "UP017", # datetime.UTC alias -- keep timezone.utc for consistency
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
